--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.5",
+    "lucide-react": "^0.575.0",
     "next": "16.1.6",
+    "next-auth": "^4.24.13",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.2",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
